// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Snapshot tests down replacement 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig-tooltip-inner-content"
        >
            <div
                className="hig-tooltip-title"
            >
                test
            </div>
        </div>
    }
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
>
    <div
        className="hig-tooltip-children-wrapper"
    />
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      placement="down"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
/>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "right",
        "arrowContent": null,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "placement": "down",
        "prefixCls": "hig-tooltip",
        "title": "test",
        "trigger": "click",
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    placement="down"
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
/>,
}
`;

exports[`DatePicker Snapshot tests focus 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig-tooltip-inner-content"
        >
            <div
                className="hig-tooltip-title"
            >
                test
            </div>
        </div>
    }
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="focus"
>
    <div
        className="hig-tooltip-children-wrapper"
    />
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="focus"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="focus"
/>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "right",
        "arrowContent": null,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "placement": "right",
        "prefixCls": "hig-tooltip",
        "title": "test",
        "trigger": "focus",
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="focus"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="focus"
/>,
}
`;

exports[`DatePicker Snapshot tests hover 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig-tooltip-inner-content"
        >
            <div
                className="hig-tooltip-title"
            >
                test
            </div>
        </div>
    }
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="hover"
>
    <div
        className="hig-tooltip-children-wrapper"
    />
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="hover"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="hover"
/>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "right",
        "arrowContent": null,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "placement": "right",
        "prefixCls": "hig-tooltip",
        "title": "test",
        "trigger": "hover",
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="hover"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="hover"
/>,
}
`;

exports[`DatePicker Snapshot tests left replacement 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig-tooltip-inner-content"
        >
            <div
                className="hig-tooltip-title"
            >
                test
            </div>
        </div>
    }
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
>
    <div
        className="hig-tooltip-children-wrapper"
    />
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      placement="left"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
/>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "right",
        "arrowContent": null,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "placement": "left",
        "prefixCls": "hig-tooltip",
        "title": "test",
        "trigger": "click",
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    placement="left"
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
/>,
}
`;

exports[`DatePicker Snapshot tests right replacement 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig-tooltip-inner-content"
        >
            <div
                className="hig-tooltip-title"
            >
                test
            </div>
        </div>
    }
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
>
    <div
        className="hig-tooltip-children-wrapper"
    />
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
/>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "right",
        "arrowContent": null,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "placement": "right",
        "prefixCls": "hig-tooltip",
        "title": "test",
        "trigger": "click",
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
/>,
}
`;

exports[`DatePicker Snapshot tests up replacement 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Tooltip
    align={Object {}}
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    overlay={
        <div
            className="hig-tooltip-inner-content"
        >
            <div
                className="hig-tooltip-title"
            >
                test
            </div>
        </div>
    }
    placement="right"
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
>
    <div
        className="hig-tooltip-children-wrapper"
    />
</Tooltip>,
  "nodes": Array [
    <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <Tooltip
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      placement="up"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
/>,
    "_forcedUpdate": false,
    "_instance": Tooltip {
      "context": Object {},
      "props": Object {
        "anchorPoint": "right",
        "arrowContent": null,
        "destroyTooltipOnHide": true,
        "mouseEnterDelay": 1,
        "mouseLeaveDelay": 0.2,
        "placement": "up",
        "prefixCls": "hig-tooltip",
        "title": "test",
        "trigger": "click",
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <Tooltip
      align={Object {}}
      anchorPoint="right"
      arrowContent={null}
      destroyTooltipOnHide={true}
      mouseEnterDelay={1}
      mouseLeaveDelay={0.2}
      overlay={
            <div
                  className="hig-tooltip-inner-content"
            >
                  <div
                        className="hig-tooltip-title"
                  >
                        test
                  </div>
            </div>
      }
      placement="right"
      prefixCls="hig-tooltip"
      title="test"
      trigger="click"
>
      <div
            className="hig-tooltip-children-wrapper"
      />
</Tooltip>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Tooltip
    anchorPoint="right"
    arrowContent={null}
    destroyTooltipOnHide={true}
    mouseEnterDelay={1}
    mouseLeaveDelay={0.2}
    placement="up"
    prefixCls="hig-tooltip"
    title="test"
    trigger="click"
/>,
}
`;
